added visitors and teaching

--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@ ourg.">
                         <div class="navbar-collapse collapse" id="templatemo-nav-bar">
                             <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;font-size:15px">
                               <!-- <li class="active"><a href="#templatemo-top">HOME</a></li> -->
-                                <li><a href="#templatemo-About">ABOUT</a></li>
-                                <li><a href="#templatemo-Impact">IMPACT</a></li>
-                                <li><a href="#templatemo-Publications">PUBLICATIONS</a></li>
-                                <li><a href="#templatemo-Awards">AWARDS</a></li>
-                                <li><a href="#templatemo-Students">STUDENTS</a></li>
-                                <li><a href="#templatemo-Services">SERVICES</a></li>
+                              <li><a href="#templatemo-About">ABOUT</a></li>
+                              <li><a href="#templatemo-Impact">IMPACT</a></li>
+                              <li><a href="#templatemo-Publications">PUBLICATIONS</a></li>
+                              <li><a href="#templatemo-Students">MY TEAM</a></li>
+                              <li><a href="#templatemo-Awards">AWARDS</a></li>
+                              <li><a href="#templatemo-Teaching">TEACHING</a></li>
+                              <li><a href="#templatemo-Services">SERVICES</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div><!--/.container-fluid -->
@@ -614,7 +615,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
       <div class="templatemo-line-header" style="margin-top: 0px;" >
         <div class="text-center">
           <hr class="team_hr team_hr_left
-                     hr_gray"/><span class="txt_darkgrey">Students & Visitors</span>
+                     hr_gray"/><span class="txt_darkgrey">My Team</span>
           <hr class="team_hr team_hr_right hr_gray" /><br>
         </div>
         <br>
@@ -631,14 +632,25 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
             </li>
           </ol></font>
 <br>
-          <!-- <font size="5"><b>Visitors:</b></font><br><br> -->
-          <!-- <font size="4"> -->
-          <!-- <ol type="circle"> -->
-	  <!--   <li><a href="https://wwwfr.uni.lu/snt/people/paulo_esteves_verissimo">Prof. Paulo Verissimo</a>, University of Luxembourg, Luxembourg. (Nov.2019-Dec.2019)</li> -->
-          <!--   <li><a href="http://www.cs.wm.edu/~esmirni/">Prof. Evgenia Smirni</a>, College of William and Mary, US. (Jan.2020-March.2020) </li> -->
-          <!--   </li> -->
-          <!-- </ol></font> -->
-
+          <font size="5"><b>Visitors:</b></font><br><br>
+          <font size="4">
+            I'm so fortunate to have the following colleagues visiting
+            my team for collaboration:<br><br>
+          <ol type="circle">
+	    <li>
+              <b><a href="https://wwwfr.uni.lu/snt/people/paulo_esteves_verissimo">Paulo
+              Verissimo</a> (IEEE Fellow, ACM Fellow)</b>, Professor
+              and FNR PEARL Chair at University of Luxembourg,
+              Luxembourg. <br>(Nov.2019-Dec.2019)
+            </li>
+            <li>
+              <b><a href="http://www.cs.wm.edu/~esmirni/">Evgenia
+              Smirni</a> (IEEE Fellow, ACM Distinguished
+              Scientist) </b>, Sidney P. Chockley Professor at College
+              of William and Mary, US. <br> (Jan.2020-March.2020)
+            </li>
+            </li>
+          </ol></font>
         </div>
         <br class="clearfix"/>
       </div>
@@ -751,6 +763,28 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	      </li>
           </ul></font>
           <br>
+        </div>
+        <br class="clearfix"/>
+      </div>
+      <br class="clearfix"/>
+    </div>
+  </div>
+</div>
+<div id="templatemo-Teaching" >
+  <div class="container">
+    <div class="row">
+      <div class="templatemo-line-header" style="margin-top: 0px;" >
+        <div class="text-center">
+          <hr class="team_hr team_hr_left
+                     hr_gray"/><span class="txt_darkgrey">Teaching</span>
+          <hr class="team_hr team_hr_right hr_gray" /><br>
+        </div>
+        <br>
+        <div class="col-lg-offset-0"><br><br>
+          <font size="4">
+          <ol type="circle">
+	    <li>FIT5214 Blockchain, Monash University, 2019.</li>
+          </ol></font>
         </div>
         <br class="clearfix"/>
       </div>
