--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
-                            <li><b>Comference Program Committee Member</b></li>
+                            <li><b>Conference Program Committee Member</b></li>
                             <b>2020</b>
                             <ul type="circle">
                               <li>
