--- a/index.html
+++ b/index.html
@@ -117,12 +117,10 @@ ourg.">
                       </div>
                       <p> <font size="4"> <b>Jiangshan Yu (于江山)</b></p>
                     <div class="col-lg-offset-4 JYuinfo_right">
-                      <p> I'm a lecturer (equivalent
-                      to U.S. assistant professor)
-                      at  <a href="https://www.monash.edu">
-                            Monash University
-                          </a>, Australia, and an honorary research
-                      fellow working
+                      <p> I'm a lecturer (equivalent to U.S. assistant
+                      professor) at <a href="https://www.monash.edu">
+                      Monash University</a>, Australia, and an
+                      honorary research fellow working
                       with <a href="http://www.cs.bham.ac.uk/~mdr/">
                       Prof. Mark Ryan</a>
                       (<a href="https://garage.ext.hp.com/us/en/hp-labs/hp_sponsors_new_chairincybersecurityattheuniversityofbirmingham.html">
@@ -371,8 +369,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
                           Our work on <b>attacking and analysing CryptoNote-style blockchains</b>
                           (<a href="https://eprint.iacr.org/2019/186">
-                          CSF'19
-                          </a>, <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf">
+                          CSF'19</a>, <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf">
                             FC'19
                           </a>, and AsiaCCS'19</a>) has traced 70%-91%
                           transactions of supposed-to-be
