remove some review

--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             </ul>
                             <br>
 
-	                    <li><b>Invited Reviewer (Journal):</b><br>
+	                    <li><b>Invited Reviewer (Selected Journal):</b><br>
 	                      <ul type="circle">
                                 <li><i> ACM Transactions on Transactions on Privacy and Security <b>(ACM TOPS)</b></i></li>
 	                        <li><i>IEEE
@@ -924,31 +924,31 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li><i>
                                       IEEE Transactions on Emerging Topics in Computing <b>(IEEE TETC)</b>
                                 </i></li>
-                                <li><i>IEEE Wireless Communications</i></li>
-                                <li><i>IEEE Access</i></li>
-                                <li><i>IEEE Software</i></li>
-                                <li><i>
-                                Future Generation Computer Systems
-                                </i></li>
-                                <li><i>
-                                      Security and Communication
-                                      Networks
-                                </i></li>
+                                <!-- <li><i>IEEE Wireless Communications</i></li> -->
+                                <!-- <li><i>IEEE Access</i></li> -->
+                                <!-- <li><i>IEEE Software</i></li> -->
+                                <!-- <li><i> -->
+                                <!-- Future Generation Computer Systems -->
+                                <!-- </i></li> -->
+                                <!-- <li><i> -->
+                                <!--       Security and Communication -->
+                                <!--       Networks -->
+                                <!-- </i></li> -->
 				<li><i>The Computer Journal</i></li>
-                                <li><i>Computers & Security</i></li>
-                                <li><i>
-                                      International Journal of
-                                      Information Security
-                                </i></li>
-	                        <li><i>Journal
-	                        of Information Security and
-	                            Applications</i></li>
-	                        <li><i> International Journal of
-                                Distributed Sensor Networks
-                                </i></li>
-                                <li><i>
-                                    Journal of Computer Science and Technology
-                                </i></li>
+                                <!-- <li><i>Computers & Security</i></li> -->
+                                <!-- <li><i> -->
+                                <!--       International Journal of -->
+                                <!--       Information Security -->
+                                <!-- </i></li> -->
+	                        <!-- <li><i>Journal -->
+	                        <!-- of Information Security and -->
+	                        <!--     Applications</i></li> -->
+	                        <!-- <li><i> International Journal of -->
+                                <!-- Distributed Sensor Networks -->
+                                <!-- </i></li> -->
+                                <!-- <li><i> -->
+                                <!--     Journal of Computer Science and Technology -->
+                                <!-- </i></li> -->
                                 <li><i>
                                     PLOS ONE
                                 </i></li>
