--- a/web/pub.html
+++ b/web/pub.html
@@ -138,8 +138,24 @@
                         </li>
                         <br>
                           <li><b>Conference:</b><br>
-                              2019
+                              2020
                       <ol type="1" start = "10">
+                              <li>Tong Cao, Jiangshan Yu, Jeremie
+                                  Decouchant, Xiapu Luo, Paulo
+                                  Verissimo.<br> <b>Exploring the
+                                  Monero Peer-to-Peer
+                                  Network</b> <br><i>Financial
+                                  Cryptography and Data Security
+                                  (<b>FC</b>) 2020.</i></li>
+                                <li>Qin WANG, Jiangshan YU, Zhiniang Peng,
+                          Vancuong Bui, Shiping Chen, Yong Ding, Yang
+                          Xiang.<br> <b> Security Analysis on dBFT
+                          protocol of NEO</b> <br><i>Financial
+                          Cryptography and Data Security (<b>FC</b>)
+                                        2020.</i></li>
+                      </ol>
+                              2019
+                      <ol type="1" start = "12">
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Verissimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
@@ -192,7 +208,7 @@
                                   </li>
                             </ol>
                                   2012-2018
-                            <ol type="1" start = "17">
+                            <ol type="1" start = "19">
                           <li>
                             Runchao Han, Jiangshan Yu, Joseph Liu, and
                             Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating
@@ -260,13 +276,6 @@
                                               Vulnerabilities: A
                                               Survey.
                                               </a> </b><br><i>CoRR abs/1908.08605</i></li>
-                                          <li>
-                                Tong Cao, Jiangshan Yu, Jérémie Decouchant, Xiapu Luo, Paulo Veríssimo.
-                                <br>
-                                  <b><a href="https://eprint.iacr.org/2019/411"> Exploring the Monero
-                                      Peer-to-Peer Network.
-                                  </a></b> <br><i>IACR ePrint</i>.
-                                  </li>
                                   <li>Joao Chervinski, Diego Kreutz, Jiangshan Yu.                                 <br>
                                       <b><a href="https://eprint.iacr.org/2019/455"> FloodXMR: Low-cost transaction flooding attack with Monero's bulletproof protocol.</a></b> <br><i>IACR ePrint</i>.</li>
                                       <li>Runchao Han, Zhimei Sui, Jiangshan Yu, Joseph Liu, and Shiping Chen.                                 <br>
