--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2020-01]</b> Two papers accepted at
+                          FC'20. Well done Tong Cao and Qin Wang!</li>
                             <li> <b> [2019-08-22]
                               </b>I'm very proud to receive the Dean's
                                     Award for Excellence in Research
@@ -486,6 +488,19 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "6">
+                                <li>Tong Cao, Jiangshan Yu, Jeremie
+                                  Decouchant, Xiapu Luo, Paulo
+                                  Verissimo.<br> <b>Exploring the
+                                  Monero Peer-to-Peer
+                                  Network</b> <br><i>Financial
+                                  Cryptography and Data Security
+                                  (<b>FC</b>) 2020.</i></li>
+                                <li>Qin WANG, Jiangshan YU, Zhiniang Peng,
+                          Vancuong Bui, Shiping Chen, Yong Ding, Yang
+                          Xiang.<br> <b> Security Analysis on dBFT
+                          protocol of NEO</b> <br><i>Financial
+                          Cryptography and Data Security (<b>FC</b>)
+                                    2020.</i></li>
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Veríssimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
