--- a/index.html
+++ b/index.html
@@ -844,13 +844,22 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>
                                 The 40th IEEE International Conference on Distributed Computing Systems <b>(ICDCS)</b>
                               </li>
-
+                              <li>
+                                The 39th IEEE International Symposium
+                                on Reliable Distributed
+                                Systems <b>(SRDS)</b>
+                              </li>
                               <li>
                                 The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
                               </li>
                               <li>
                                 The 54th IEEE International Conference on
                                 Communications <b>(ICC)</b>
+                              </li>
+                              <li>
+                                The 19th IEEE International Conference on Trust, Security and Privacy in Computing and Communications <b>(TrustCom)</b> </li>
+                              <li>
+                                The 25th Australasian Conference on Information Security and Privacy <b>(ACISP)</b>
                               </li>
                             </ul>
                             <b>2019</b>
@@ -874,8 +883,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                    The 18th IEEE International
                                     Conference on Trust, Security and
                                     Privacy in Computing and
-                                    Communications<b> (IEEE
-                                    TrustCom)
+                                    Communications<b> (TrustCom)
                                    </b>
                                 </li>
                                 <li>
