--- a/index.html
+++ b/index.html
@@ -635,12 +635,13 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
           <font size="5"><b>PhD students:</b></font><br><br>
           <font size="4">
           <ol type="circle">
-	    <li>Tong Cao, University of Luxembourg. (Feb.2018-) (Co-supervised with Prof. Paulo Verissimo)</li>
-            <li>Runchao Han, Monash University. (Feb.2019-) </li>
+	    <li>Tong Cao (Feb.2018-), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo)</li>
+            <li>Runchao Han (Feb.2019-), Monash University. </li>
 	    <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
 	    <!-- <li>Liangrong Zhao (Exp. Nov.2019-), Monash University.</li> -->
 	    <li>Zhimei Sui (Oct.2019-), Monash University.</li>
 	    <li>Shange Fu (Oct.2019-), Monash University.</li>
+            <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
             </li>
           </ol></font>
 <br>
