--- a/index.html
+++ b/index.html
@@ -117,30 +117,29 @@ ourg.">
                       </div>
                       <p> <font size="4"> <b>Jiangshan Yu (于江山)</b></p>
                     <div class="col-lg-offset-4 JYuinfo_right">
-                      <p> I'm a lecturer (equivalent to U.S. assistant
-                      professor) at <a href="https://www.monash.edu">
-                      Monash University</a>, Australia, and an
-                      honorary research fellow working
-                      with <a href="http://www.cs.bham.ac.uk/~mdr/">
-                      Prof. Mark Ryan</a>
-                      (<a href="https://garage.ext.hp.com/us/en/hp-labs/hp_sponsors_new_chairincybersecurityattheuniversityofbirmingham.html">
-                      HP Chair in Cybersecurity
-                          </a>) at
-                      the  <a href="http://www.birmingham.ac.uk/">University
-                      of Birmingham</a>, UK, where I received my PhD
-                      in computer science. I did my postdoc
+                      <p> I'm Associate Director (Research) at Monash
+                        Blockchain Technology Centre, a member of the
+                        Monash Cybersecurity Lab, and a Lecturer
+                        (~US Assistant Professor) in the Faculty of
+                        Information Technology
+                        at <a href="https://www.monash.edu"> Monash
+                          University</a>.
+
+                        I received my PhD in Computer Science from the
+                      University of Birmingham (UK), supervised
+                      by <a href="http://www.cs.bham.ac.uk/~mdr/">
+                      Prof. Mark Ryan</a> (HP Inc. Chair in
+                      Cybersecurity). I did my postdoc
                       with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
                       Prof. Paulo Esteves-Verissimo
-                          </a>(IEEE and ACM Fellow)
-                      at <a href="http://wwwen.uni.lu/snt"> SnT</a>, <a href="http://wwwen.uni.lu">
-                            University of Luxembourg</a>. <br><br> My research interests are in
-                          the area of cybersecurity and
-                          cryptography. In particular, the focus of my
-                          research has been on (designing and
-                          attacking) Blockchain consensus,
-                          Blockchain security and privacy,
-                          cryptographic key management, and
-                        ledger-based applications.<br><br>
+                          </a>(IEEE and ACM Fellow) at SnT, University
+                      of Luxembourg. <br><br> My research interests
+                      are in the area of cybersecurity and
+                      cryptography. In particular, the focus of my
+                      research has been on (designing and attacking)
+                      Blockchain consensus, Blockchain security and
+                      privacy, cryptographic key management, and
+                      ledger-based applications.<br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
