--- a/index.html
+++ b/index.html
@@ -842,6 +842,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <b>2020</b>
                             <ul type="circle">
                               <li>
+                                ACM Advances in Financial Technologies <b>(AFT)</b>
+                              </li>
+                              <li>
                                 The 40th IEEE International Conference on Distributed Computing Systems <b>(ICDCS)</b>
                               </li>
                               <li>
