--- a/index.html
+++ b/index.html
@@ -816,8 +816,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                         </div>
                         <br>
                               <div class="col-lg-offset-0"><br><br>
-                    <font size="5"><b> Professional
-                              Activities:
+                    <font size="5"><b> Service at Monash:
+                    </b></font><br><br><font size="4">
+                      <ul type="circle">
+                        <li>Associate Director (Research), <a href="https://www.monash.edu/blockchain">Monash Blockchain Technology Centre</a>.</li>
+                        <li>Engagement Coordinator (Deputy Director), <a href="https://www.monash.edu/it/ssc">Department of Software Systems and Cybersecurity</a>.</li>
+                        <li>Media Spokesperson, <a href="https://www.monash.edu/it">Faculty of Information Technology</a>.</li>
+                    </ul><br>
+
+                    <font size="5"><b> External Service:
                     </b></font><br><br><font size="4">
 	                  <ul type="disc"; style="margin-bottom:
                               6px">
