--- a/index.html
+++ b/index.html
@@ -412,11 +412,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <hr class="team_hr team_hr_right hr_gray" />
                         </div>
                         <div class="col-lg-offset-0"><br><br>
-                          <font size="5"><b>Selected Recent Publications: </b></font><br><br><font size="4"> 
-                              &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
+                          <font size="5"><b>Selected Recent Publications: </b>
+</font><br><br><font size="4"> 
+                              &nbsp;&nbsp;&nbsp;&nbsp;(An incomplete list of publications can be found at my <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
                               en"> <b>Google scholar</b></a>
-                              and<!--  <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan"> -->
-                              <!-- <b>DBLP</b></a> page.  --> a <a href="web/pub.html"><b>full list of publications</b></a>.)
+                              and <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">
+                              <b>DBLP</b></a> page.)
 <br><br>
 	                  <ul type="square"; style="margin-bottom:
                                                     6px">
