--- a/index.html
+++ b/index.html
@@ -688,15 +688,57 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	    <ul type="disc"; style="margin-bottom:
                                     6px">
               
-              <li><b>Grant: </b>
+              <li><b>Selected Grant: </b>
                 <ul type="circle">
-	          <li>
-                    "Technology inspired feasibility
-                    study for secure email and cloud
-                    storage", GBP33,000
-                    from Technology Strategy Board
-                    (Innovate UK), 2015.
+	          <li> (Co-CI -- 34 CIs in total). Reliable Affordable
+                  Clean Energy for 2030, AU$349,000,000, the 21st
+                  round of the Cooperative Research Centre (CRC)
+                  program. 07.2020-06.2031.
                   </li>
+                    <li>
+                      (Sole CI). Design space and pitfalls: blockchain
+                      interoperability, AU$298,371, contract
+                      research. 2020-2021.
+                    </li>
+                  <!--   2020 (Sole CI). Workload characterisation of -->
+                  <!--   blockchain applications, AU$20,130 from Monash -->
+                  <!--   University, 01.2020-04.2020. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   2019 (Co-CI -- 3 CIs in total). Next-generation -->
+                  <!--   blockchains: decentralised data structures -->
+                  <!--   suitable for IoT devices, AU$131,586 from Data61, -->
+                  <!--   10.2019-10.2022. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   2019 (Co-CI-- 3 CIs in total). A consensus -->
+                  <!--   mechanism for blockchain in the Internet of -->
+                  <!--   Things, AU$131,586 from Data61, 11.2019-11.2022. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   2019 (Co-CI -- four CIs in total). In search of -->
+                  <!--   scalable consensus protocols for public -->
+                  <!--   blockchains in IoT environment, AU$35,000 from -->
+                  <!--   Data61, 03.2019-02.2022. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   2019 (Sole CI). Design and prototyping -->
+                  <!--   energy-efficient RepuCoin, AU$10,690 from Monash -->
+                  <!--   University, 11.2019-08.2020. -->
+                  <!-- </li> -->
+                  <!-- <li>2016 (Sole CI). Scalable blockchains. 10,000 -->
+                  <!--   Euro (approx. AU$16,000) from The University of -->
+                  <!--   Luxembourg. </li> -->
+                  <!-- <li>2015 (Co-CI -- 2 CIs in total). Public ledger -->
+                  <!--   for secure email and cloud storage. 33,000 GBP -->
+                  <!--   (approx. AU$63,000) from Technology Strategy Board -->
+                  <!--   (Innovate UK). -->
+                  <!-- </li> -->
+                  <!-- </li> -->
+                  <!-- <li>2015 (Sole CI). Blockchain applications. 1,500 -->
+                  <!--   GBP (approx. AU$2,900) from the University of -->
+                  <!--   Birmingham and Obillex Ltd. -->
+                  <!-- </li> -->
                 </ul>
               </li><br>
               
