--- a/index.html
+++ b/index.html
@@ -892,6 +892,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <b>2020</b>
                             <ul type="circle">
                               <li>
+                                The 51st Annual IEEE/IFIP International Conference on Dependable Systems and Networks <b>(DSN)</b>
+                              </li>
+                              <li>
                                 ACM Advances in Financial Technologies <b>(AFT)</b>
                               </li>
                               <li>
@@ -980,6 +983,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Invited Reviewer (Selected Journal):</b><br>
 	                      <ul type="circle">
+                                <li><i> ACM Computing Surveys </i></li>
                                 <li><i> ACM Transactions on Transactions on Privacy and Security <b>(ACM TOPS)</b></i></li>
 	                        <li><i>IEEE
 	                        Transactions on Information Forensics &
