--- a/index.html
+++ b/index.html
@@ -160,12 +160,27 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2020-05]</b> I'm delighted to
+                              serve as a PC member for <b>DSN'21</b>.</li>
+                          <li> <b> [2020-05]</b> Our paper "Towards
+                          Fair and Privacy-Preserving Federated Deep
+                          Models" is accepted for publication at <b>IEEE
+                          TPDS</b>.</li>
+                          <li> <b> [2020-02]</b> I'm delighted to
+                              serve as a PC member
+                              for <a href="https://aft.acm.org"><b>AFT'20</b></a>
+                              and <a href="https://srds-conference.org/">
+                              <b>SRDS'20</b>
+                            </a>.</li>
                           <li> <b> [2020-01]</b> Two papers accepted at
-                          FC'20. Well done Tong Cao and Qin Wang!</li>
+                            <b>FC'20</b>. Well done Tong Cao and Qin Wang!</li>
+                          <li> <b> [2019-11]</b> I'm delighted to
+                              serve as a PC member
+                              for <a href="https://icdcs2020.sg"><b>ICDCS'20</b></a>.</li>
                             <li> <b> [2019-08-22]
-                              </b>I'm very proud to receive the Dean's
+                              </b>I'm very proud to receive the <b>Dean's
                                     Award for Excellence in Research
-                                    Impact! </li>
+                                    Impact</b>! </li>
                           <li>
                             <b>[2019-07-29]</b> Our paper "On the
                             optionality and fairness of Atomic Swaps"
