--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@ http://www.templatemo.com/tm-395-urbanic
                               selected for a <b>2020 IBM Faculty
                               Award</b> with a $40,000 USD gift
                               fund.</li>
+                          <li> <b> [2020-06]</b> I'm delighted to
+                            serve as a PC member
+                            for <b>FC'21</b>.</li>
                           <li> <b> [2020-06]</b> Our paper "How to
                           Democratise and Protect AI: Fair and
                           Differentially Private Decentralised Deep
@@ -945,7 +948,13 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <b>2021</b>
                             <ul type="circle">
                               <li>
-                                The 51st Annual IEEE/IFIP International Conference on Dependable Systems and Networks <b>(DSN)</b>
+                                The 51st Annual IEEE/IFIP
+                                International Conference on Dependable
+                                Systems and Networks <b>(DSN)</b>
+                              </li>
+                              <li>
+                              International Conference on Financial
+                              Cryptography and Data Security <b>(FC)</b>
                               </li>
                             </ul>
                               <b>2020</b>
