--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2020-07]</b> I'm delighted to
+                            serve as a PC member
+                            for <b>ICBC'21</b>.</li>
                           <li> <b> [2020-06]</b> I'm delighted to be
                               selected for a <b>2020 IBM Faculty
                               Award</b> with a $40,000 USD gift
@@ -953,15 +956,19 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Systems and Networks <b>(DSN)</b>
                               </li>
                               <li>
-                              International Conference on Financial
-                              Cryptography and Data Security <b>(FC)</b>
+                              The 25th International Conference on
+                              Financial Cryptography and Data
+                              Security <b>(FC)</b>
+                              </li>
+                              <li>
+                                The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
                               </li>
                             </ul>
                               <b>2020</b>
                               <ul type="circle">
 
                               <li>
-                                ACM Advances in Financial Technologies <b>(AFT)</b>
+                                The 2nd ACM Advances in Financial Technologies <b>(AFT)</b>
                               </li>
                               <li>
                                 The 40th IEEE International Conference on Distributed Computing Systems <b>(ICDCS)</b>
@@ -972,7 +979,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Systems <b>(SRDS)</b>
                               </li>
                               <li>
-                                The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
+                                The 2nd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
                               </li>
                               <li>
                                 The 54th IEEE International Conference on
