--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	    <li>Shange Fu (Oct.2019-), Monash University.</li>
             <li>Zhimei Sui (Nov.2019-), Monash University.</li>
             <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
+            <li>Sina Aeeneh (July.2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
             </li>
           </ol></font>
 <br>
