--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                       <ul type="circle">
                         <li>Associate Director (Research), <a href="https://www.monash.edu/blockchain">Monash Blockchain Technology Centre</a>. (January 2020 - present)</li>
                         <li>Engagement Coordinator (Deputy Director), <a href="https://www.monash.edu/it/ssc">Department of Software Systems and Cybersecurity</a>. (April 2020 - present)</li>
-                        <li>Media Spokesperson, <a href="https://www.monash.edu/it">Faculty of Information Technology</a>. (June.2019 - present) </li>
+                        <!-- <li>Media Spokesperson, <a href="https://www.monash.edu/it">Faculty of Information Technology</a>. (June.2019 - present) </li> -->
                     </ul><br>
 
                     <font size="5"><b> External Service:
