--- a/index.html
+++ b/index.html
@@ -754,11 +754,33 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                   round of the Cooperative Research Centre (CRC)
                   program. 07.2020-06.2031.
                   </li>
+                  <li>
+                    (Sole CI). Interoperability Across Distributed
+                    Ledgers, AU$57,397, gift research funding from
+                    IBM. 2020-2021.
+                  </li>
                     <li>
                       (Sole CI). Design space and pitfalls: blockchain
                       interoperability, AU$298,371, contract
                       research. 2020-2021.
                     </li>
+                  <li>
+                    (Co-CI-- 3 CIs in total). A consensus mechanism
+                    for blockchain in the Internet of Things,
+                    AU$131,586 from Data61, 11.2019-11.2022.
+                  </li>
+                  <li>
+                    (Co-CI -- 3 CIs in total). Next-generation
+                    blockchains: decentralised data structures
+                    suitable for IoT devices, AU$131,586 from Data61,
+                    10.2019-10.2022.
+                  </li>
+                  <!-- <li> -->
+                  <!--    (Co-CI -- four CIs in total). In search of -->
+                  <!--   scalable consensus protocols for public -->
+                  <!--   blockchains in IoT environment, AU$35,000 from -->
+                  <!--   Data61, 03.2019-02.2022. -->
+                  <!-- </li> -->
                   <!--   2020 (Sole CI). Workload characterisation of -->
                   <!--   blockchain applications, AU$20,130 from Monash -->
                   <!--   University, 01.2020-04.2020. -->
