--- a/index.html
+++ b/index.html
@@ -158,13 +158,15 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2020-10]</b> I'm delighted to be
+                            selected for a <b>2020 IBM Academic
+                            Award</b>. This is covered
+                            by <a href="https://www.monash.edu/it/about-us/news-and-events/latest/articles/2020/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Monash
+                            News</a>
+                            and <a href="https://cryptonews.com.au/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Crypto News</a>.</li>
                           <li> <b> [2020-07]</b> I'm delighted to
                             serve as a PC member
                             for <b>ICBC'21</b>.</li>
-                          <li> <b> [2020-06]</b> I'm delighted to be
-                              selected for a <b>2020 IBM Faculty
-                              Award</b> with a $40,000 USD gift
-                              fund.</li>
                           <li> <b> [2020-06]</b> I'm delighted to
                             serve as a PC member
                             for <b>FC'21</b>.</li>
@@ -825,7 +827,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               
 	      <li><b>Awards:</b><br>
 	        <ul type="circle">
-                  <li> <b>IBM Faculty Award</b>, 2020.</li>
+                  <li> <b>IBM Academic Award</b>, 2020. (Covered by <a href="https://www.monash.edu/it/about-us/news-and-events/latest/articles/2020/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Monash News</a> and <a href="https://cryptonews.com.au/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Crypto News</a>.)</li> 
                   <li> <b>Dean's Award for
                       Excellence in Research Impact
                     </b>, Monash university, Australia,
