--- a/index.html
+++ b/index.html
@@ -691,6 +691,37 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
         </div>
         <br>
         <div class="col-lg-offset-0"><br><br>
+          <font size="5"><b>Master students (minor thesis):</b></font><br><br>
+          <font size="4">
+          <ol type="circle">
+            <li>
+              Ran An (2019), "Analysis of stablecoins in blockchain",
+              Monash University. (Co-supervised with Joseph Liu). (Now
+              a PhD student at Monash University.)
+            </li>
+            <li>Xinyu Zhang (2019), "Revocable ring signature", Monash
+              University. (Co-supervised with Joseph Liu). (Now a PhD
+              student at Monash University.)</li>
+	    <li>Shaocong Yu (2019), "Traceability analysis of Monero using
+              machine learning technology", Monash
+              University. (Co-supervised with Joseph Liu and Lan
+              Du).</li>
+	    <li>
+              Pranav Kulkarni (2020), "Exploring energy-efficient RepuCoin",
+              Monash University.
+            </li>
+            <li>
+              Lianyang Yu (2020), "Game theoretic analysis on
+              reputation concept in blockchain security", Monash
+              University.
+            </li>
+            <li>
+              Yu Xia (2020), "Formal analysis and verification of the
+              RepuCoin system", Monash University. (Co-supervised with
+              Vincent Rahli.)
+            </li>
+          </ol></font>
+
           <font size="5"><b>PhD students:</b></font><br><br>
           <font size="4">
           <ol type="circle">
@@ -921,8 +952,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
         <div class="col-lg-offset-0"><br><br>
           <font size="4">
           <ol type="circle">
-	    <li>FIT5214 Blockchain, Monash University, 2019.</li>
-            <li>FIT5214 Blockchain, Monash University, 2020.</li>
+	    <li>FIT5214 Blockchain, Monash University, 2019. (Designer and Lecturer)</li>
+            <li>FIT5214 Blockchain, Monash University, 2020. (Chief Examiner and Lecturer)</li>
           </ol></font>
         </div>
         <br class="clearfix"/>
@@ -1015,6 +1046,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>
                                 The 25th Australasian Conference on Information Security and Privacy <b>(ACISP)</b>
                               </li>
+                              <li>The 15th International Conference on Network and System Security <b>(NSS)</b></li>
+
                             </ul>
                             <b>2019</b>
                             <ul type="circle">
